--- a/packages/proto/package.json
+++ b/packages/proto/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "public/index.js",
   "scripts": {
-    "start": "http-server -p 3000",
+    "start": "http-server",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "hganem@calpoly.edu",
