--- a/package.json
+++ b/package.json
@@ -4,6 +4,11 @@
   "description": "A web application that allows the user to create clothes want lists",
   "main": "index.js",
   "scripts": {
+    "build": "npm run -w app build",
+    "start": "npm run start:app",
+    "start:api": "npm start -w server",
+    "start:app": "npm run -w server start:app",
+    "start:proto": "npm run -w server start:proto",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
